# Support-Ticket-Triage-Environment

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  baseline_scores.json  inference.py  openenv.yaml  pyproject.toml  requirements.txt
audits/: cascading_corruption_test.py  convergence_test.py  determinism_audit.py  grader_accuracy_audit.py  impossible_stress_test.py  inference_quality_audit.py  openenv_compliance_audit.sh  run_all_audits.py  submission_readiness.py
docs/: ARCHITECTURE_DECISIONS.md  REAL_TIME_DATA.md
scratch/: check_output.py
scripts/: install-hooks.sh
server/: app.py  baseline_runner.py  baseline_scores.json  conftest.py  environment.py  invariants.py  llm_utils.py  models.py  test_tokens.py
server/data/: __init__.py  fetcher.py  realistic_synthetic.py
server/graders/: grader_classify.py  grader_prioritize.py  grader_resolve.py
server/tasks/: __init__.py  task_classify.py  task_prioritize.py  task_resolve.py
tests/: __init__.py  test_adversarial_cases.py  test_env.py  test_env_advanced.py  test_extra.py
